# native-utils

./: .gitignore  LICENSE  README.md  lerna.json  package.json
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml
bench/: hash.js  hashing.js  index.js  recover.js  sign.js  signing.js
common/: Cargo.toml
common/src/: tokenize.rs
lib/: index.d.ts  index.js
native/: Cargo.toml  cargo.toml  package.json
native/lib/: index.js
native/native/: Cargo.toml
native/src/: keccak.rs  lib.rs  serde.rs  state.rs  types.rs  utils.rs
tests/: hash.test.ts  hashing.test.ts  recover.test.ts  sign.test.ts
wasm/: Cargo.toml
wasm-utils/: Cargo.toml  LICENSE  README.md  package.json
wasm-utils/src/: lib.rs
wasm/src/: encode.rs  lib.rs  serde.rs  types.rs
