[package]
name = "statechannels-wasm-utils"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ethereum-types = "0.9"
ethabi = { git = "https://github.com/graphprotocol/ethabi", rev = "fe7cab5" }
hex = "0.4"
libsecp256k1 = "0.3"
serde_derive = "1.0"
serde = "1.0"
tiny-keccak = "2.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }
